--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,14 @@
   <body class="container">
     <button id="complimentButton">Get a compliment</button>
     <button id="fortuneButton">Get a fortune</button>
-    <div id="Which-Pill?">
-
-      
+    <div>
+      <form>
+        <input type="text"/>
+        <button id="submit">submit</button>
+      </form>
+      <ol>
+        <a></a>
+      </ol>
     </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
